# DeepGreen

./: .gitignore  Experiment.py  Fig03 - Training loss curve.ipynb  Fig06 - Prediction Compare Test.ipynb  MANIFEST.in  setup.cfg
3D_data_creation/: Nonlinear_Poisson_Cosine.py
experiments/: Appendix-Sys0-xxx.py  Appendix-Sys1-RandomInitialize.py  Sys0-Experiment.py  TODO.md  utils.py
