[metadata]
name = deep_green
version = 0.0.1
author = Yoann Eusebi
author_email = yoann.eusebi@hotmail.fr
url = https://xebia.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Example package description
long_description = file: README.md
keywords = DeepGreen, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    tensorflow
    numpy
    matplotlib
notebook = jupyter>=1.0.0, matplotlib
zip_safe = True
include_package_data = True


